# camtech-chatbot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
research/: rag.ipynb  result.md  test_apy.py
src/: config.py
src/api/: main.py  models.py
src/bot/: chain.py
src/ingestion/: populate_db.py
