[project]
name = "camtech-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens>=3.0.1",
    "chromadb>=1.5.9",
    "comm>=0.2.3",
    "langchain>=1.3.11",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.2",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]
